// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  style={
    Object {
      "animationDuration": "1.25s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "1.25s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.basic 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  style={
    Object {
      "animationDuration": "4s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "4s",
      }
    }
  />
</Icon>
`;

exports[`LoadingIcon [common] example testing should match snapshot(s) for 1.basic 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-LoadingIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  style={
    Object {
      "animationDuration": "0.75s",
    }
  }
  viewBox="0 0 100 100"
>
  <rect
    fill="none"
    height="100"
    width="100"
    x="0"
    y="0"
  />
  <circle
    className="lucid-LoadingIcon-circle"
    cx="50"
    cy="50"
    r="40"
  />
  <circle
    className="lucid-LoadingIcon-spinner"
    cx="50"
    cy="50"
    r="40"
    style={
      Object {
        "animationDuration": "0.75s",
      }
    }
  />
</Icon>
`;
